--- a/views/index02.hbs
+++ b/views/index02.hbs
@@ -27,7 +27,7 @@
         </form>
     </div>
     <div class="dataBase">
-            <h3>Wszystie pojazdy:</h3>
+            {{{isEditing items}}}
         <table>
             <form>
                 <th></th>
