--- a/views/partials/trEdit.hbs
+++ b/views/partials/trEdit.hbs
@@ -40,6 +40,6 @@
 <td>{{benzyna}}</td>
 <td>{{uszkodzony}}</td>
 <td>{{naped4x4}}</td>
- <td><button type="submit" name="id" value={{_id}} class="delete" formaction="/deleteCar" onclick="return confirm('czy usunąć?')">DELETE</button></td>
+ <td><button type="submit" name="id" value={{_id}} class="delete" formaction="/deleteCar" onclick="return confirm('Czy na pewno chcesz usunąć ten dokument z kolekcji?')">DELETE</button></td>
  <td><button type="submit" name="id" value={{_id}} class="edit" formaction="/editCar">EDIT</button></td>
 {{/if}}
